some last-minute changes for exercise2 webpage

--- a/exercise2/exercise2.html
+++ b/exercise2/exercise2.html
@@ -1,5 +1,25 @@
 <h1>ITADS Exercise 2: Sequence Containers</h1>
 
+<p>
+It is recommended that you create a new directory for this
+exercise. Also, here is a
+little <a href="itads/exercise2/Makefile">Makefile</a> that you can
+place into that directory. The Makefile allows you to simply launch
+<a href="http://linuxmanpages.com/man1/make.1.php">make</a> in the
+terminal, and that will figure out which java sources need to be
+recompiled into binaries. <em>(This only works on Linux, but Windows
+users probably are using Eclipse anyway, which also takes care of
+compiling the correct sources.)</em>
+</p>
+
+<p>
+Also note that now each .java file contains one class, and that the
+file name (without the .java extension) is exactly the same as the
+class it contains. This is a naming convention which allows Java to
+find classes across different files and helps developers to keep their
+project directories more organized.
+</p>
+
 
 
 <h2>exercise 2.1: vectors (resizeable arrays)</h2>
@@ -71,8 +91,8 @@ command, so you have to press Control-C to exit from it.
 <p>
 <a href="itads/exercise2/StringList.java">StringList.java</a> is a
 functioning implementation of a simply linked list of
-strings <em>(some of the methods are not yet implemented and some
-fields are still commented-out)</em>.  It
+strings <em>(some of the methods are not yet implemented and some more
+fields and methods are commented-out for now)</em>.  It
 needs <a href="itads/exercise2/StringListNode.java">StringListNode.java</a>
 to store the data along with the pointer to the next element, and it
 uses <a href="itads/exercise2/StringListIterator.java">StringListIterator.java</a>
