--- a/exercise3/exercise3b.html
+++ b/exercise3/exercise3b.html
@@ -1,4 +1,4 @@
-<h1>ITADS Exercise 3a: Sorting Algorithms</h1>
+<h1>ITADS Exercise 3b: Sorting Algorithms</h1>
 
 <p>
   As before, it is recommended that you create a new directory for
