simple queue suffices, do not need priorities for nf1

--- a/exercise5/exercise5b.html
+++ b/exercise5/exercise5b.html
@@ -82,6 +82,7 @@
   Open spaces and doors are marked as freely traversable.
   Apart from the method which propagates the potential function, the application in <a href="itads/exercise5/Mansion.java">Mansion.java</a> is already finished and ready to run.
   In particular, the application contains code for parsing command line arguments and backtracking the path for display on the console.
+  The portion of code which you have to implement is clearly marked inside the <tt>propagate</tt> method.
 </p>
 
 </ul>
