--- a/web/ex1.html
+++ b/web/ex1.html
@@ -476,11 +476,11 @@ NUMBER OF INTEGER DIVISORS other than 1 or itself:
  19 
  20 ****</pre>
   </li>
-</p>
+</ol>
 
 
 
-<h2>exercise 1.x: command line arguments</h2>
+<h2>exercise 1.5: command line arguments</h2>
 
 <p>
 We have now covered enough basics to understand the two arguments of
@@ -553,7 +553,7 @@ argv[1] (length 1):     `&quot;'</pre>
 
 
 
-<h2>exercise 1.x: bubble sort</h2>
+<h2>exercise 1.6: bubble sort</h2>
 
 <p>
 Sorting is one of the most fundamental tasks that programs have to
